tests/error/modifier_errors/flag_dagger_assign.err
Error: Invalid expression in dagger (at $FILE:8:4)
  | 
6 | @guppy
7 | def test() -> None:
8 |     x = 3
  |     ^^^^^ Assignment found in a dagger context

Guppy compilation failed due to 1 previous error
